--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-web": "~0.19.10",
     "rss-to-json": "^2.1.1",
     "tamagui": "^1.116.7",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "@shopify/flash-list": "1.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
